--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -9,9 +9,10 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 25px 30px;
+  padding: 5px 30px;
   background-color: #333;
   color: #fff;
+  min-height: 60px;
 }
 
 .logo {
